[gd_scene load_steps=4 format=3 uid="uid://bcgjkpkf7p7bg"]

[ext_resource type="Script" uid="uid://p5sc4syqrpg1" path="res://UI/report.gd" id="1_c0r6n"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fskqw"]
bg_color = Color(0.521751, 0.154608, 0.499388, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.254902, 0.866667, 0.466667, 1)

[sub_resource type="Theme" id="Theme_fskqw"]
Button/styles/normal = SubResource("StyleBoxFlat_fskqw")
Label/colors/font_shadow_color = Color(0, 0, 0, 0)
Label/constants/line_spacing = 3
Label/constants/outline_size = 0
Label/font_sizes/font_size = 30

[node name="Report" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c0r6n")

[node name="report card" type="Control" parent="."]
anchors_preset = 0
offset_left = 114.0
offset_top = 90.0
offset_right = 154.0
offset_bottom = 130.0

[node name="background" type="ColorRect" parent="report card"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(22.1073, 12.1234)
color = Color(0.737255, 0.596078, 0.494118, 1)

[node name="ColorRect" type="ColorRect" parent="report card"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(22.0694, 2.76)
color = Color(0.615686, 0.470588, 0.368627, 1)

[node name="Label" type="Label" parent="report card"]
layout_mode = 0
offset_left = 255.0
offset_top = 7.0
offset_right = 687.0
offset_bottom = 62.0
theme = SubResource("Theme_fskqw")
text = "End of Day Report "

[node name="Report stats" type="Control" parent="."]
anchors_preset = 0
offset_left = 193.0
offset_top = 253.0
offset_right = 233.0
offset_bottom = 293.0

[node name="DayLabel" type="Label" parent="Report stats"]
layout_mode = 0
offset_left = 306.0
offset_top = -97.0
offset_right = 431.0
offset_bottom = -67.0
text = "Day {level}"

[node name="CenterContainer" type="CenterContainer" parent="Report stats"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 23.0
offset_top = -29.0
offset_right = 695.0
offset_bottom = 233.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="Report stats/CenterContainer"]
layout_mode = 2
columns = 2

[node name="Feedback" type="Label" parent="Report stats/CenterContainer/GridContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Supervisor feedback: "

[node name="PassLabel" type="Label" parent="Report stats/CenterContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
text = "{failed}"
autowrap_mode = 3

[node name="Biscuits_processed" type="Label" parent="Report stats/CenterContainer/GridContainer"]
layout_mode = 2
text = "Biscuits Processed:"

[node name="ProcessedLabel" type="Label" parent="Report stats/CenterContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "{biscuits_processed}"

[node name="Label" type="Label" parent="Report stats/CenterContainer/GridContainer"]
layout_mode = 2
text = "Mistakes Made: "

[node name="MistakesLabel" type="Label" parent="Report stats/CenterContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "{mistakes_made}"
